# cb64

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  README.rst  cb64-config.cmake
code/: CMakeLists.txt  b64.c  b64.cpp  b64.h  b64.hpp
demo/: CMakeLists.txt  demo.cpp
help/: Doxyfile
test/: CMakeLists.txt  b64-decode.cpp  b64-encode.cpp
test/data/: 002.txt  003.txt  004.txt  006.txt  007.txt  008.txt  009.txt  010.txt
